--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     ]
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.1",
+    "@clerk/themes": "^2.4.10",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
