--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ next-env.d.ts
 .idea/
 # clerk configuration (can include secrets)
 /.clerk/
+# prisma
+/lib/generated/prisma
+/prisma/migrations
+/prisma/dev.db
