--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "prisma:studio": "prisma studio",
     "lint": "next lint",
     "format": "prettier --write .",
     "prepare": "husky"
